# pixelparty

./: !GMLIVE README.txt  .gitignore  .gitmodules  PIXELPARTY.yyp  PIXELPARTY.yyp.rnxbk  README.md  copylatest.cpp  elevator anim sheet test.ase  fade blend.blend  fade blend.blend1  fsgkdkdtykedtyk.aseprite  gate anim.aseprite  linuxfix.sh  manny marker.ase  marker template SMALL.ase  marker template.ase  xdraw.gml
datafiles/: crlf.txt  lf.txt  script02  script03  script04  script05  test.txt
datafiles/newscripts/: darkness.bos  default.txt  dex.bos  empty.txt  global.bos  globals 1.txt  handlertest.bos  handlertest.txt  honestary.bos  lol.bat  lv1.bos  lv2.bos  lv3.bos  non lv specific quests.bos  test.bos  test.txt  tutorial.bos  zglobals1.bos  zglobals1.txt
datafiles/text/: gametitles.txt
extensions/Ext_imgui/: Ext_imgui.yy
extensions/imgui/: imgui.yy
extensions/perlin/: perlin.yy
extensions/pxpa_perlin/: pxpa_perlin.yy
extensions/pxpa_timestamp/: pxpa_timestamp.yy
extensions/pxpa_unixtime/: pxpa_unixtime.yy
fonts/f_bigtest/: f_bigtest.old.yy  f_bigtest.yy
fonts/f_jax/: f_jax.old.yy  f_jax.yy
fonts/f_main/: f_main.old.yy  f_main.yy
fonts/f_shop/: f_shop.old.yy  f_shop.yy
fonts/fntSmall/: fntSmall.old.yy  fntSmall.yy
imgui shit/: CMakeLists.txt  build.bat  main.cpp
notes/NOTES NOTES NOTES/: NOTES NOTES NOTES.txt  NOTES NOTES NOTES.yy
notes/Note3/: Note3.txt  Note3.yy
notes/gm source code for reference/: gm source code for reference.txt  (+1 more)
objects/MANAGER/: MANAGER.yy  (+16 more)
perlin_c/: CMakeLists.txt  main.c
timestamp/: CMakeLists.txt  main.c
(+1195 files in other folders)
